apps/flux-web-ui-gtw/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator-web-ui
spec:
  hostnames:
    - ${hostname:=flux.envoy.cluster.local}
  parentRefs:
    - name: envoy-gateway-main
      namespace: envoy-gateway-system
      group: gateway.networking.k8s.io
      kind: Gateway
  rules:
    - backendRefs:
        - name: flux-operator
          kind: Service
          port: 9080
      matches:
        - path:
            type: PathPrefix
            value: /
